course-5/kubernetes/04-ingress/alb_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-094cfa044f7da02f7,subnet-00f1529cccf86fb7a,subnet-0b70e0cba1fed4c03,subnet-0e9909552eec70960
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: web
              servicePort: 80
